Add Minigtest LogStream

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -1,10 +1,14 @@
 set(base_SRCS
     Condition.cpp
     CountDownLatch.cpp
+    Date.cpp
     Exception.cpp
+    Logging.cpp
+    LogStream.cpp
     Thread.cpp
     ThreadPool.cpp
     Timestamp.cpp
+    TimeZone.cpp
   )
 add_library(rawmd_base ${base_SRCS})
 target_link_libraries(rawmd_base pthread)
