--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,4 +41,5 @@ string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
 message(STATUS "CXX_FLAGS = " ${CMAKE_CXX_FLAGS} " " ${CMAKE_CXX_FLAGS_${BUILD_TYPE}})
 
 add_subdirectory(base)
+add_subdirectory(net)
 add_subdirectory(test)
