--- a/net/preface/CMakeLists.txt
+++ b/net/preface/CMakeLists.txt
@@ -3,3 +3,5 @@ add_executable(echocli echocli.cpp)
 add_executable(echosrv_epoll echosrv_epoll.cpp)
 
 add_executable(echosrv_poll echosrv_poll.cpp)
+
+add_executable(echorevsrv_poll echorevsrv_epoll.cpp)
